--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -76,7 +76,8 @@
             <svg class="close-audio-player" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512"><path d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"/></svg>
         </div>
         <div class="audio-player noselect hidden">
-            <audio class="audio-file hidden"></audio>
+            <video class="audio-file" poster="./assets/img/favicon/apple-touch-icon.png">
+            </video>
             <span class="audio-duration time-passed">00:00:00</span>
             <input class="audio-slider" type="range" min="0" max="100" value="0">
             <input class="audio-volume-slider" type="range" min="0" max="100" value="100">
